# fsrs

./: .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  repro_simple.fsx
.claude/: project.json  settings.local.json
.gemini/: project.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  docs.yml  pr-checks.yml  release.yml
docs/: 02-language-spec.md  03-vm-design.md  ABI.md  EMBEDDING_GUIDE.md  HOST_INTEROP.md  HOT_RELOAD_IMPLEMENTATION.md  NUSHELL_PATTERNS.md  OMAKASE.md  PHASE3_COMPLETION_REPORT.md  PHASE3_EXECUTION_PLAN.md  PHASE3_INTEGRATION_REPORT.md  PHASE3_WORKSTREAMS.md  RESEARCH_NOTES.md  RFD-001-MCP-DSL.md  ROADMAP.md  ROADMAP_REVIEW.md  SECURITY.md  SETUP.md  STDLIB_REFERENCE.md  TOC.md  bytecode-format-update.md  changelog.md  ci-cd-summary.md  ci-cd.md  compiler-modules-integration.md  development.md  host_interop_demo.md  host_interop_implementation.md  hot-reload.md  index.md  issue-024-tuple-implementation-summary.md  issue-025-status.md  issue_4_stdlib_prelude.md  issue_61_garbage_collection.md  issue_95_method_dispatch.md  package-lock.json  package.json  setup-ci.md  stdlib-implementation.md  stdlib-summary.md  (+3 more)
docs/.vitepress/: config.ts
docs/archive/: FILENAME_UPDATES_SUMMARY.md  REFERENCE_UPDATE_COMPLETE.md  compiler-modules-integration.md  fable-comparison.md  implementation-summary.md  issue-024-tuple-implementation-summary.md  issue-025-implementation-plan.md  (+12 more)
examples/: ardour_osc_control.fsx  arithmetic.fsx  arrays_basic.fsx  arrays_nested.fsx  arrays_operations.fsx  arrays_updates.fsrs  async_demo.fsx  boolean_logic.fsx  bytecode_compilation.rs  bytecode_demo.fsx  commander.fsx  conditionals.fsx  config_validator.fsx  currying_higher_order.fsx  currying_simple.fsrs  data_transformation.fsx  error_handling.fsx  fibonacci.fsx  hello.fsx  hello.fzb  host_interop_demo.rs  json_demo.fsx  let_bindings_showcase.fsx  lists_basic.fsx  lists_nested.fsrs  lists_operations.fsx  lists_recursive.fsx  mcp_server_concept.fsx  minifs_config.fsx  modules_basic.fsx  modules_compiled.fsx  modules_math.fsx  modules_nested.fsx  pattern_matching_basic.fsx  pattern_matching_functions.fsx  pattern_matching_nested.fsrs  pattern_matching_tuples.fsx  pipeline_demo.fsx  plugin_example.fsx  quickstart.fsx  (+16 more)
fusabi-tui-runtime/crates/fusabi-tui-engine/: Cargo.toml
fusabi-tui-runtime/crates/fusabi-tui-engine/examples/: hot_reload_demo.rs
fusabi-tui-runtime/crates/fusabi-tui-engine/src/: dashboard.rs  error.rs  event.rs  lib.rs  loader.rs  state.rs  watcher.rs
fusabi-tui-runtime/crates/fusabi-tui-scarab/: Cargo.toml  README.md
fusabi-tui-runtime/crates/fusabi-tui-scarab/examples/: scarab_plugin.rs
fusabi-tui-runtime/crates/fusabi-tui-scarab/src/: convert.rs  error.rs  lib.rs  plugin.rs  renderer.rs  shared.rs
gem/: issue_09_visual_identity.md  issue_10_cli_styling.md  issue_11_omakase_cookbook.md  issue_12_logo_assets.md  issue_13_readme_brand_voice.md  issue_1_hof_support.md  issue_6_bytecode_serialization.md  issue_7_examples.md  issue_8_contributor_guide.md
rust/: Cargo.toml  ISSUE_125_FIX_SUMMARY.md  MULTILINE_COMMENTS.md  VERIFICATION.md  convert_to_arc_mutex.sh  justfile
rust/crates/fusabi/: Cargo.toml  README.md
rust/crates/fusabi-bench-compare/: Cargo.toml
rust/crates/fusabi-bench-compare/src/: benchmarks.rs  main.rs
rust/crates/fusabi-frontend/: Cargo.toml  README.md
rust/crates/fusabi-frontend/src/: ast.rs  compiler.rs  error.rs  inference.rs  lexer.rs  lib.rs  loader.rs  modules.rs  parser.rs  provider_resolver.rs  types.rs
rust/crates/fusabi-frontend/src/type_provider/: cache.rs  generator.rs  mod.rs  registry.rs
rust/crates/fusabi-frontend/src/type_provider/json_schema/: mod.rs  parser.rs  types.rs
rust/crates/fusabi-frontend/src/type_provider/kubernetes/: mod.rs  openapi.rs
rust/crates/fusabi-frontend/src/type_provider/opentelemetry/: conventions.rs  mod.rs
rust/crates/fusabi-frontend/tests/: compiler_modules.rs  dus_execution.rs  integration_test.rs  list_literal_syntax_tests.rs  list_syntax_demo.rs  module_integration.rs  option_syntax_tests.rs  records_execution.rs  while_loop_tests.rs
rust/crates/fusabi-lsp/: Cargo.toml
rust/crates/fusabi-lsp/src/: lib.rs  main.rs
rust/crates/fusabi-mcp/: Cargo.toml  README.md
rust/crates/fusabi-mcp/examples/: basic_usage.rs
rust/crates/fusabi-mcp/src/: lib.rs  main.rs
rust/crates/fusabi-pm/: Cargo.toml
rust/crates/fusabi-pm/src/: build.rs  cli.rs  install.rs  lib.rs  manifest.rs  publish.rs  registry.rs
rust/crates/fusabi-vm/: Cargo.toml  README.md
rust/crates/fusabi-vm/benches/: alloc.rs  dispatch_bench.rs  function_calls.rs  op_dispatch.rs  simple_bench.rs
rust/crates/fusabi-vm/examples/: ui_formatting_example.md
rust/crates/fusabi-vm/src/: chunk.rs  closure.rs  error_reporter.rs  gc.rs  host.rs  instruction.rs  lib.rs  optimized_vm.rs  optimizer.rs  value.rs  vm.rs
rust/crates/fusabi-vm/src/stdlib/: array.rs  async_ops.rs  commands.rs  config.rs  console.rs  events.rs  file.rs  http.rs  json.rs  list.rs  map.rs  math.rs  mod.rs  navigation.rs  option.rs  print.rs  process.rs  result.rs  sqlite.rs  string.rs  terminal_control.rs  terminal_info.rs  time.rs  ui_formatting.rs  url.rs
rust/crates/fusabi-vm/src/stdlib/net/: mod.rs  osc.rs
rust/crates/fusabi-vm/tests/: test_gc.rs  test_host_interop.rs  test_method_dispatch.rs  test_reentrant_host.rs.skip_for_now  test_serialization.rs  test_stdlib.rs  test_url_stdlib.rs
rust/crates/fusabi/examples/: bytecode_api_demo.rs  phage_integration.rs
rust/crates/fusabi/src/: host_api.rs  lib.rs  main.rs
rust/crates/fusabi/tests/: arrays_integration.rs  bytecode_api_tests.rs  host_objects_test.rs  lists_integration.rs  mixed_integration.rs  option_integration.rs  records_integration.rs  structural_typing_test.rs  test_integration.rs  test_type_checking.rs
scripts/: bootstrap.nu  build.nu  dev.nu  gen-docs.nu  gen-docs.sh  implement-lists.sh  setup-hooks.nu  setup.nu  test.nu
tests/: arrays_bounds.fsx  hof_stress.fsx
(+231 files in other folders)
