[package]
name = "fusabi-tui-engine"
version = "0.1.0"
edition = "2021"
description = "Hot reload engine and dashboard runtime for Fusabi TUI"
license = "MIT"

[dependencies]
fusabi-tui-core = { path = "../fusabi-tui-core" }
fusabi-tui-render = { path = "../fusabi-tui-render" }
fusabi-tui-widgets = { path = "../fusabi-tui-widgets" }
notify = "6.1"
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
