[package]
name = "fusabi-tui-scarab"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Scarab shared memory backend for Fusabi TUI"
repository = "https://github.com/fusabi-lang/fusabi"

[dependencies]
# Internal dependencies
fusabi-tui-core = { path = "../fusabi-tui-core", version = "0.1.0" }
fusabi-tui-render = { path = "../fusabi-tui-render", version = "0.1.0" }

# Shared memory IPC
shared_memory = "0.12"

# Zero-copy transmutation
bytemuck = { version = "1.14", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Optional dependencies for plugin system
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
plugin = ["serde", "serde_json"]

[[example]]
name = "scarab_plugin"
required-features = ["plugin"]
