[package]
name = "fusabi-frontend"
version = "0.1.0"
edition = "2021"
description = "Compiler frontend (lexer, parser, AST) for Fusabi scripting language."
repository = "https://github.com/fusabi-lang/fusabi"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
fusabi-vm = { path = "../fusabi-vm", version = "0.1.0" }
