[package]
name = "fusabi-frontend"
version = "0.15.0"
edition = "2021"
description = "Frontend (lexer, parser, compiler) for Fusabi scripting language"
repository = "https://github.com/fusabi-lang/fusabi"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
fusabi-vm = { path = "../fusabi-vm", version = "0.15.0" }
