[package]
name = "fusabi-lsp"
version = "0.23.0"
edition = "2021"
rust-version = "1.70.0"
description = "Language Server Protocol implementation for Fusabi"
license = "MIT"

[[bin]]
name = "fusabi-lsp"
path = "src/main.rs"

[dependencies]
fusabi-frontend = { path = "../fusabi-frontend", version = "0.23.0" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
