[package]
name = "fusabi-mcp"
version = "0.35.0"
edition = "2021"
rust-version = "1.70.0"
description = "MCP (Model Context Protocol) integration for Fusabi"
license = "MIT"

[dependencies]
fusabi = { path = "../fusabi", version = "0.35.0", features = ["osc", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
