[package]
name = "fusabi-vm"
version = "0.8.0"
edition = "2021"
description = "High-performance bytecode VM for Fusabi scripting language."
repository = "https://github.com/fusabi-lang/fusabi"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
criterion = "0.5"
fusabi = { path = "../fusabi" }

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "vm_benchmarks"
harness = false

[features]
default = []
serde = ["dep:serde", "dep:bincode"]
