[package]
name = "fusabi-vm"
version = "0.20.0"
edition = "2021"
description = "High-performance bytecode VM for Fusabi scripting language."
repository = "https://github.com/fusabi-lang/fusabi"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
bincode = { version = "1.3", optional = true }
serde_json = { version = "1.0", optional = true }
rosc = { version = "0.10", optional = true }

[dev-dependencies]
criterion = "0.5"
fusabi = { path = "../fusabi" }
fusabi-frontend = { path = "../fusabi-frontend" }

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "vm_benchmarks"
harness = false

[features]
default = ["json"]
serde = ["dep:serde", "dep:bincode"]
json = ["dep:serde_json"]
osc = ["dep:rosc"]
