[package]
name = "fusabi-vm"
version = "0.35.0"
edition = "2021"
rust-version = "1.70.0"
description = "Virtual Machine for Fusabi language"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
bincode = { version = "1.3", optional = true }
serde_json = { version = "1.0", optional = true }
rosc = { version = "0.10", optional = true }
rusqlite = { version = "0.31", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
tokio = { version = "1.36", features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }

[dev-dependencies]
criterion = "0.5"
fusabi = { path = "../fusabi" }
fusabi-frontend = { path = "../fusabi-frontend" }

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "vm_benchmarks"
harness = false

[[bench]]
name = "dispatch_bench"
harness = false

[features]
default = ["json"]
serde = ["dep:serde", "dep:bincode"]
json = ["dep:serde_json"]
osc = ["dep:rosc"]
sqlite = ["dep:rusqlite"]
http = ["dep:reqwest", "dep:serde_json"]
async = ["dep:tokio"]
