[package]
name = "fusabi"
version = "0.3.0"
edition = "2021"
description = "A potent, functional scripting layer for Rust infrastructure."
repository = "https://github.com/fusabi-lang/fusabi"
license = "MIT"

[[bin]]
name = "fus"
path = "src/main.rs"

[lib]
name = "fusabi"
path = "src/lib.rs"

[dependencies]
fusabi-frontend = { path = "../fusabi-frontend", version = "0.3.0" }
fusabi-vm = { path = "../fusabi-vm", version = "0.3.0", features = ["serde"] }
